xray/template/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1443
      filter_chains:
        - name: tcp_proxy
          filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: destination
                cluster: cluster_0
                access_log:
                  - name: envoy.access_loggers.filelog
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/envoyfilelog.log
    - name: listener_1
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1444
      filter_chains:
        - name: tcp_proxy
          filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: destination
                cluster: cluster_0
                access_log:
                  - name: envoy.access_loggers.filelog
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/envoyfilelog.log
    - name: listener_2
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1445
      filter_chains:
        - name: tcp_proxy
          filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: destination
                cluster: cluster_0
                access_log:
                  - name: envoy.access_loggers.filelog
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/envoyfilelog.log
    - name: listener_3
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1446
      filter_chains:
        - name: tcp_proxy
          filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: destination
                cluster: cluster_0
                access_log:
                  - name: envoy.access_loggers.filelog
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/envoyfilelog.log
    - name: listener_4
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1447
      filter_chains:
        - name: tcp_proxy
          filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: destination
                cluster: cluster_0
                access_log:
                  - name: envoy.access_loggers.filelog
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/envoyfilelog.log
    - name: listener_5
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1448
      filter_chains:
        - name: tcp_proxy
          filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: destination
                cluster: cluster_0
                access_log:
                  - name: envoy.access_loggers.filelog
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/envoyfilelog.log
    - name: listener_6
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1449
      filter_chains:
        - name: tcp_proxy
          filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: destination
                cluster: cluster_0
                access_log:
                  - name: envoy.access_loggers.filelog
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/envoyfilelog.log
    - name: listener_7
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1450
      filter_chains:
        - name: tcp_proxy
          filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: destination
                cluster: cluster_0
                access_log:
                  - name: envoy.access_loggers.filelog
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/envoyfilelog.log
    - name: listener_ws
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 11446
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_wss_to_wss
            upgrade_configs:
            - upgrade_type: websocket
            route_config:
              name: local_route
              virtual_hosts:
              - name: app
                domains:
                - "domain.imrcrab.com"
                routes:
                - match:
                    prefix: "/wsproject"
                  route:
                    cluster: service_wss
                - match:
                    prefix: "/jectvscode"
                  route:
                    cluster: wsprojectvscode
                - match:
                    prefix: "/golangwang"
                  route:
                    cluster: golangwang
                - match:
                    prefix: "/news"
                  route:
                    cluster: news
                - match:
                    prefix: "/pages"
                  route:
                    cluster: pages
            http_filters:
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: /root/domain.imrcrab.com/domain.imrcrab.com_bundle.pem
                  private_key:
                    filename: /root/domain.imrcrab.com/domain.imrcrab.com.key
  clusters:
    - name: cluster_0
      connect_timeout: 30s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
                endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 11446
    - name: cluster_tcp_lb
      connect_timeout: 30s
      type: static
      lb_policy: MAGLEV
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: cluster_tcp_lb
        endpoints:
          - lb_endpoints:
              - metadata:
                  filter_metadata:
                    envoy.lb:
                      hash_key: "xray-11443-20221125"
                endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 11443
              - metadata:
                  filter_metadata:
                    envoy.lb:
                      hash_key: "xray-11444-20221126"
                endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 11444
              - metadata:
                  filter_metadata:
                    envoy.lb:
                      hash_key: "xray-11445-20221127"
                endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 11445
    - name: service_wss
      type: STRICT_DNS
      connect_timeout: 30s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_wss
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 2441
    - name: wsprojectvscode
      type: STRICT_DNS
      connect_timeout: 30s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: wsprojectvscode
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 2442
    - name: golangwang
      type: STRICT_DNS
      connect_timeout: 30s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: golangwang
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 2443
    - name: news
      type: STRICT_DNS
      connect_timeout: 30s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: news
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 2444
    - name: pages
      type: STRICT_DNS
      connect_timeout: 30s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: pages
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 2445
